--- a/members.html
+++ b/members.html
@@ -19,12 +19,15 @@
    
     <ul class="navbar alt_navbar">
         <li class="brand"><a href="./index.html">مدارس الجيل الصاعد</a></li>
-        <li class="item"><a href="./index.html">الرئيسية</a></li>
+        <li class="item active"><a href="./index.html">الرئيسية</a></li>
         <li class="item"><a href="news.html">الاخبار</a></li>
-        <li class="active"><a href="members.html">اعضاء المدرسة</a></li>
-        <li class="item"><a href="#">المميزات</a></li>
-        <li class="item"><a href="#">تواصل معنا</a></li>
-        <li class="item"><a href="#">البحث</a></li>
+        <li class="item"><a href="members.html">اعضاء المدرسة</a></li>
+        <li class="item"><a href="./benefits.html">المميزات</a></li>
+        <li class="item"><a href="./contact.html">تواصل معنا</a></li>
+        
+      <li class="menu">  <i class="fa fa-bars" aria-hidden="true" style="color: #fff"></i></li>
+        
+
     </ul>
     <div class="container">
 
