--- a/contact.html
+++ b/contact.html
@@ -28,12 +28,15 @@
    
     <ul class="navbar alt_navbar">
         <li class="brand"><a href="./index.html">مدارس الجيل الصاعد</a></li>
-        <li class="item"><a href="./index.html">الرئيسية</a></li>
+        <li class="item active"><a href="./index.html">الرئيسية</a></li>
         <li class="item"><a href="news.html">الاخبار</a></li>
         <li class="item"><a href="members.html">اعضاء المدرسة</a></li>
-        <li class="item"><a href="benefits.html">المميزات</a></li>
-        <li class="active"><a href="#">تواصل معنا</a></li>
-        <li class="item"><a href="#">البحث</a></li>
+        <li class="item"><a href="./benefits.html">المميزات</a></li>
+        <li class="item"><a href="./contact.html">تواصل معنا</a></li>
+        
+      <li class="menu">  <i class="fa fa-bars" aria-hidden="true" style="color: #fff"></i></li>
+        
+
     </ul>
     <!--start contact us-->
     <div class="container">
@@ -78,7 +81,7 @@
                     <ul class="footer-info">
                         <li><a href="#">من نحن</a> </li>
                         <li><a href="#">دليل التواصل</a> </li>
-                        <li><a href="#">السياسات و الشروط </a></li>
+                        <li ><a href="#">السياسات و الشروط </a></li>
                         <li><a href="#">الهاتف : 373030</a></li>
                         <li><a href="#">حضرموت - المكلا </a></li>
                     </ul>
